Register surefire plugin to run the unit tests